themes/tundra/tundra.css
/* ... */
.tundra .dijitSpinner .dijitDownArrowButton {
	border-top:1px solid #9b9b9b;	/* line between top and bottom arrow */
}

.tundra .dijitTextBoxFocused,
.tundra .dijitComboBoxFocused,
.tundra .dijitSpinnerFocused {
	/* input field when focused (eg: typing affects it) */
	border-color:#366dba;
	border-style:inset;
}

.tundra .dijitTextBoxError,
.tundra .dijitComboBoxError,
.tundra .dijitSpinnerError {
	border:1px solid #f3d118;
	background-color:#f9f7ba;
	background-image:none;
}

.tundra .dijitFormWidgetErrorFocus,
.tundra .dijitComboBoxErrorFocus,
.tundra .dijitSpinnerErrorFocus {
	background-color:#ff6;
	background-image:none;
}

/* Validation errors  */
.tundra .dijitValidationIcon {
	/* prevent height change when widget goes from valid to invalid state, and
	 * workaround browser (FF and safari) sizing bugs when last table column is empty or display:null
	 */
	display: block;
	height: 16px;
	width: 1px;
}
.tundra .dijitValidationIconText {
	display: none;
}

.tundra .dijitTextBoxError .dijitValidationIcon,
.tundra .dijitComboBoxError .dijitValidationIcon,
.tundra .dijitSpinnerError .dijitValidationIcon {
	width: 16px;
	height: 16px;
	background-repeat: no-repeat;
	background-image: url('images/warning.png');
}

/*
 *  CheckBox and Radio Widgets,
 *	and the CSS to embed a checkbox or radio icon inside a ToggleButton.
 *
 *	Order of images in the default sprite (from L to R, checkbox and radio in same image):
 *		checkbox	normal 	 - checked
 *							 - unchecked
 *					disabled - checked
 *							 - unchecked
 *					hover 	 - checked
 *							 - unchecked
 *
 *		radio		normal 	 - checked
 *							 - unchecked
 *					disabled - checked
 *							 - unchecked
 *					hover 	 - checked
 *							 - unchecked
*/

.tundra .dijitToggleButton .dijitCheckBox,
.tundra .dijitToggleButton .dijitRadio,
.tundra .dijitToggleButton .dijitCheckBoxIcon,
.tundra .dijitToggleButton .dijitRadioIcon {
	background-image: url('images/checkmarkNoBorder.gif');
}

.tundra .dijitCheckBox,
.tundra .dijitRadio,
.tundra .dijitCheckBoxIcon,		/* inside a toggle button */
.tundra .dijitRadioIcon	{		/* inside a toggle button */
	background-image: url('images/checkmark.gif'); /* checkbox sprite image */
	background-repeat: no-repeat;
	width: 16px;
	height: 16px;
	overflow: visible; 
	margin: 0;
	padding: 0; 
}

.tundra .dijitCheckBox,
.tundra .dijitToggleButton .dijitCheckBoxIcon {
	/* unchecked */
	background-position: -16px;
}
 
.tundra .dijitCheckBoxChecked,
.tundra .dijitToggleButtonChecked .dijitCheckBoxIcon {
	/* checked */
	background-position: 0px;
}

.tundra .dijitCheckBoxDisabled {
	/* disabled */
	background-position: -48px;
}

.tundra .dijitCheckBoxCheckedDisabled {
	/* disabled but checked */
	background-position: -32px;
}

.tundra .dijitCheckBoxHover,
.tundra .dijitCheckBoxFocused {
	/* hovering over an unchecked enabled checkbox */
	background-position: -80px;
}

.tundra .dijitCheckBoxCheckedHover,
		.tundra .dijitCheckBoxCheckedFocused {
	/* hovering over a checked enabled checkbox */
	background-position: -64px;
}

.tundra .dijitRadio,
.tundra .dijitToggleButton .dijitRadioIcon {
	/* unselected */
	background-position: -112px;
}

.tundra .dijitRadioChecked,
.tundra .dijitToggleButtonChecked .dijitRadioIcon {
	/* selected */
	background-position: -96px;
}

.tundra .dijitRadioCheckedDisabled {
	/* selected but disabled */
	background-position: -128px;
}

.tundra .dijitRadioDisabled {
	/* unselected and disabled */
	background-position: -144px;
}

.tundra .dijitRadioHover,
.tundra .dijitRadioFocused {
	/* hovering over an unselected enabled radio button */
	background-position: -176px;
}

.tundra .dijitRadioCheckedHover,
.tundra .dijitRadioCheckedFocused {
	/* hovering over a selected enabled radio button */
	background-position: -160px;
}

/* Menu */
.tundra .dijitMenu {
	border: 1px solid #9b9b9b;
	margin: 0px;
	padding: 0px;
}

.tundra .dijitMenuItem {
	background-color: #f7f7f7;
	font: menu;
	margin: 0;
}

.tundra .dijitMenuItem TD {
	padding:2px;
}

.tundra .dijitMenuItemHover {
	background-color: #808080; /* #95a0b0; #555555; #aaaaaa; #646464;  #60a1ea; #848484; */
	color:#fff;
}

.tundra .dijitMenuItemIcon {
	width: 16px;
	height: 16px;
	/* padding-right: 3px; */
}

.tundra .dijitMenuExpand {
	display:none; 
}
.tundra .dijitMenuExpandEnabled {
	/* margin-top:4px;  */
	width:16px; 
	height:16px; 
	background:url('images/arrowRight.png') no-repeat center center;
	display:block;
}
.dj_ie6 .tundra .dijitMenuExpandEnabled {
	background-image:url('images/arrowRight.gif'); 
}
.tundra .dijitMenuExpandInner {
	display:none !important;
}

.tundra .dijitMenuSeparator {
	background-color: #f7f7f7;
}

/* separator can be two pixels -- set border of either one to 0px to have only one */
.tundra .dijitMenuSeparatorTop {
	border-bottom: 1px solid #9b9b9b; /*97adcb; */
}

.tundra .dijitMenuSeparatorBottom {
	border-top: 1px solid #e8e8e8;
}

/* TitlePane */

.tundra .dijitTitlePane .dijitTitlePaneTitle {
	background: #cccccc;
	background:#fafafa url("images/titleBarBg.gif") repeat-x bottom left;
	border:1px solid #bfbfbf;
	padding:4px 4px 2px 4px;
	cursor: pointer;
}

/* TODO: merge these, and all other icons to a series of background-image:() and background-position: -16*n px styles */
.tundra .dijitTitlePane .dijitArrowNode {
	width:16px;
	height:16px;
}
.tundra .dijitTitlePane .dijitClosed .dijitArrowNode {
	background:url('images/arrowRight.png') no-repeat center center; 
}
.dj_ie6 .tundra .dijitTitlePane .dijitClosed .dijitArrowNode {
	background-image:url('images/arrowRight.gif');
}
.tundra .dijitTitlePane .dijitOpen .dijitArrowNode {
	background:url('images/arrowDown.png') no-repeat center center; 
}
.dj_ie6 .tundra .dijitTitlePane .dijitOpen .dijitArrowNode {
	background-image:url('images/arrowDown.gif'); 
}
.tundra .dijitTitlePane .dijitArrowNodeInner { 
	visibility:hidden;
}

.tundra .dijitTitlePaneTitle .dijitOpenCloseArrowOuter {
	margin-right:5px;
}
/* ... */

